testdata/fixtures/audit/positive/exec_user_input_py_builtin.py
def run_code(code):
    exec(code)
