testdata/fixtures/audit/negative/exec_user_input_neg_constant_py.py
def run_fixed():
    exec("print(1)")
